--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ url: "https://rohitkg12.github.io" # the base hostname & protocol for your site,
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author: Rohit Gupta # add your name
+author-img: rohit-gupta.jpg # add your photo
+about-author: Pursuing masters of data science from the University of Melbourne. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: artemsheludko # add your Github handle
